# minishell

./: CMakeLists.txt  Makefile  cd_utils.c  check_space_divider.c  check_symbol.c  cmd_cd.c  cmd_echo.c  cmd_exit.c  cmd_export.c  cmd_pwd.c  cmd_unset.c  cmd_utils.c  creation_list.c  delete_space.c  divider.c  export_sort.c  get_next_line.c  init_env.c  main.c  main_job.c  minishell  minishell.h  my_main_svet.c  output.c  pars_dollar.c  pars_quotes.c  parsing.c  pre_parsing.c  process.c  signal.c  utils_1.c  utils_2.c  utils_list_1.c  write_array.c  write_error.c
Libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_ft.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  (+6 more)
